# PEE51---AIRegelsysteem

./: .gitignore  AI-Regelsysteem_V01.ipynb  NN-Regelsysteem.ipynb  NN-Regelsysteem_KLAAR.ipynb  README.md  converted_model.tflite  draaiboek_dataset.md  impporteren mnodel.py  keras_tensorflow_pack.py  main.py  model_data.cc  pwm_model.cc  pwm_model.tflite  pyproject.toml  requirements.txt  setup.cfg  simulatie_2.py  simulatie_resultaten.csv  sine_model.h  sine_model.tflite  tflite_sinewave_training.ipynb
01_Project_document/: Project_document.md
03_NN-Handleiding/: AI-Regelsysteem_V01.ipynb  NN_Handleiding.md  README.md  model.tflite
03_NN-Handleiding/model/: fingerprint.pb  saved_model.pb
03_NN-Handleiding/model/variables/: variables.data-00000-of-00001  variables.index
04_Tflite_Implementatie_FR/: README.md
FRDM-MCXN947/frdm_mcxn947_blank/: __repo__  led_blinky_peripheral_cm33_core0_v3_15.xml  peripherals.h
FRDM-MCXN947/frdm_mcxn947_blank/armgcc/: CMakeLists.txt  mcux_include.json
FRDM-MCXN947/sdks/frdm_mcxn947_blank_sdk/: FRDM-MCXN947_manifest_v3_15.xml
FRDM-MCXN947/sdks/frdm_mcxn947_blank_sdk/boards/frdmmcxn947/multicore_examples/rpmsg_lite_pingpong_tzm/cm33_core0/s/armgcc/: CMakeLists.txt  MCXN947_cm33_core0_flash_s.ld  config.cmake  flags.cmake
PEE51 - Onderzoek/: Modelontwikkeling.md  Stage verslag Template kopie.docx  neuraal netwerk.docx  onderzoek_thomas en mitchel.md  poster.md  verdeliing.md
PEE51 - Onderzoek/Onderzoekopzet_ontwikkeling/: Onderzoekopzet.md  main.aux  main.fdb_latexmk  main.fls  main.out  samenvatting.tex
PEE51 - Onderzoek/Onderzoekopzet_ontwikkeling/sections/: 2_doel.tex  3_onderzoeksvragen.tex
PEE51 - Onderzoek/echter_onderzoek/: Modelontwikkeling_onderzoek.md  main.aux  main.bbl  main.fdb_latexmk  main.fls  main.out  main.tex  references.bib
PEE51 - Onderzoek/echter_onderzoek/sections/: 1_inleiding.tex  2_theoretisch.tex  3_methodologie.tex  4_resultaten.tex  5_discussie.tex  6_conclusie.tex
PEE51 - Onderzoek/handleiding_implementatie/: main.out
PEE51 - Onderzoek/handleiding_implementatie/sections/: 3_methodologie.tex
PEE51 - Onderzoek/handleiding_neuraal netwerk/: Bijlagen.tex  main.aux  main.fdb_latexmk  main.fls  main.out
PEE51 - Onderzoek/handleiding_neuraal netwerk/sections/: 1_introductie.tex  3_datavoorbereiden.tex  4_modelbouwen.tex  5_modelcompileren.tex  8_modelopslaanexporteren.tex
PEE51 - Onderzoek/handleiding_simulatie/: begrippenlijst.tex  main.aux  main.blg
Time-Series-Forecasting-LSTM-main/: RNN_Youtube.ipynb
Workspace/: simulatie_2 copy.py  uhhhh.cpp
Workspace/PEE51 - Onderzoek/: Onderzoekopzetimplementatie.md  Onderzoeksopzet_template (1).docx  poster.md
Workspace/PEE51 - Onderzoek/Onderzoekopzet_ontwikkeling/: main.tex  main.toc
Workspace/PEE51 - Onderzoek/Onderzoekopzet_ontwikkeling/sections/: 1_probleemschets.tex  4_afbakening.tex  5_aanpak.tex
Workspace/PEE51 - Onderzoek/echter_onderzoek/: main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  references.bib  samenvatting.tex
Workspace/PEE51 - Onderzoek/echter_onderzoek/sections/: 1_inleiding.tex  2_theoretisch.tex  3_methodologie.tex  4_resultaten.tex  5_discussie.tex  6_conclusie.tex
Workspace/PEE51 - Onderzoek/handleiding_implementatie/: Bijlagen.tex  main.fdb_latexmk  main.fls  main.tex  references.bib
Workspace/PEE51 - Onderzoek/handleiding_implementatie/sections/: 1_inleiding.tex  (+2 more)
Workspace/PEE51 - Onderzoek/handleiding_neuraal netwerk/: main.aux  main.fdb_latexmk  main.fls  main.out  main.tex
Workspace/PEE51 - Onderzoek/handleiding_simulatie/: main.fdb_latexmk  main.fls
Workspace/src/mijn_package/: __init__.py  cli.py  functies.py  modelconverter.py
exports/: mijn_model.h  mijn_model.tflite  mijn_model_float.h
pwm_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
pwm_model/variables/: variables.data-00000-of-00001  variables.index
src/exports/: model_gewichten.txt
src/mijn_package/: config.py  mijn_logger.py
tensorflow-lite-esp32-master 2/: Train Model.ipynb  converted_model.tflite
tests/: conftest.py  test_berekeningen.py
(+4425 files in other folders)
