[metadata]
name = mijn_project
version = 0.1.0
description = Een professioneel opgezet Python-project
author = Mitchel Reints
author_email = jouw@email.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jouwgebruikersnaam/mijn_project
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    # hier komen je vereisten
    numpy
    requests

[options.packages.find]
where = src

[flake8]
max-line-length = 88
exclude = .venv,__pycache__,build,dist

[tool:pytest]
testpaths = tests